--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_depense_list2">DepenseList2Activity</string>
+    <string name="title_activity_tache_list">TacheListActivity</string>
 </resources>
