--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_depense_list2">DepenseList2Activity</string>
     <string name="title_activity_projet_list">ProjetListActivity</string>
+    <string name="search_hint">hint</string>
 </resources>
