Confirm dialog, buttons style again

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="title_activity_tache_list">TacheListActivity</string>
     <string name="title_activity_projet_list">ProjetListActivity</string>
     <string name="search_hint">hint</string>
+    <string name="error_depense">You should choose either a company or a project and not both of them !</string>
 </resources>
