--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,58 @@
     <string name="error_depense">You should choose either a company or a project and not both of them !</string>
     <string name="raison_sociale_required">The field \'Raison Sociele\' is required !</string>
     <string name="nom_du_projet_required">The field \'Nom du projet\' is required !</string>
+    <string name="ajout_societe">Ajout d\'une societé</string>
+    <string name="raison_sociale">Raison sociale</string>
+    <string name="date_fondation">Date de fondation</string>
+    <string name="create">Créer</string>
+    <string name="add">Ajouter</string>
+    <string name="show_popup_window">Show Popup Window</string>
+    <string name="manage_the_companies">Manage the Companies</string>
+    <string name="projects">Projects</string>
+    <string name="manage_the_projects">Manage the Projects</string>
+    <string name="expenses">Expenses</string>
+    <string name="manage_the_expenses">Manage the Expenses</string>
+    <string name="tasks">Tasks</string>
+    <string name="manage_the_tasks">Manage the Tasks</string>
+    <string name="statistics">Statistics</string>
+    <string name="view_the_statistics">View the Statistics</string>
+    <string name="nom_du_projet">Nom du projet</string>
+    <string name="budget_estim_dh">Budget Estimé (DH)</string>
+    <string name="date_de_d_but_du_projet">Date de début du projet</string>
+    <string name="d_scription">Déscription</string>
+    <string name="ajouter">Ajouter</string>
+    <string name="contact_email">contact@sharpinfo.ma</string>
+    <string name="edit_profile">Edit profile</string>
+    <string name="change_password">Change password</string>
+    <string name="about">About</string>
+    <string name="logout">Logout</string>
+    <string name="ajouter_un_manager">Ajouter un Manager</string>
+    <string name="pr_nom_du_manager">Prénom du Manager</string>
+    <string name="nom_du_manager">Nom du Manager</string>
+    <string name="date">Date :</string>
+    <string name="sharpinfo_societe_for_infomation">Sharpinfo societe for infomation</string>
+    <string name="dhs">DHs</string>
+    <string name="_85500">85500</string>
+    <string name="_15_35">15:35</string>
+    <string name="_08_05_2018">08-05-2018</string>
+    <string name="heure">Heure :</string>
+    <string name="societ">Societé :</string>
+    <string name="projet">Projet :</string>
+    <string name="montant">Montant :</string>
+    <string name="g_stion_de_projet_et_de_societes_android">Géstion de Projet et de societes Android</string>
+    <string name="commentaire">Commentaire :</string>
+    <string name="type_whatever_come_to_your_mind_in_this_text_area">Type whatever come to your mind in this text area</string>
+    <string name="montant_dh">Montant (DH)</string>
+    <string name="date_jj_mm_aaaa">Date : jj-mm-aaaa</string>
+    <string name="heure_hh_mm">Heure : HH:mm</string>
+    <string name="at">at</string>
+    <string name="description_du_projet">description du projet</string>
+    <string name="search">search</string>
+    <string name="dur_e_heurs">Durée (Heurs)</string>
+    <string name="_03">03</string>
+    <string name="heures">Heures</string>
+    <string name="nombre_heurs">Nombre heurs</string>
+    <string name="update">Update</string>
     <string-array name="charts_array">
         <item>Expense</item>
         <item>Time</item>
