Added depenseType in dashboard depense

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="pr_nom_du_manager">Prénom du Manager</string>
     <string name="nom_du_manager">Nom du Manager</string>
     <string name="date">Date :</string>
-    <string name="sharpinfo_societe_for_infomation">Sharpinfo societe for infomation</string>
+    <string name="sharpinfo_societe_for_infomation">Sharpinfo societe for information</string>
     <string name="dhs">DHs</string>
     <string name="_85500">85500</string>
     <string name="_15_35">15:35</string>
