--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,50 +3,50 @@
     <string name="title_activity_societe_list">SocieteListActivity</string>
     <string name="societe">Sociétés</string>
     <string name="sign_in">SIGN IN</string>
-    <string name="password">Password</string>
-    <string name="username">Username</string>
-    <string name="first_name">First name</string>
-    <string name="last_name">Last name</string>
-    <string name="sign_up">Sign Up</string>
-    <string name="username_or_password_incorrect">Username or password incorrect !</string>
-    <string name="user_created">User has been created successfully!</string>
+    <string name="password">Mot de passe</string>
+    <string name="username">Nom de comte</string>
+    <string name="first_name">Prenom</string>
+    <string name="last_name">Nom</string>
+    <string name="sign_up">S\'inscrire</string>
+    <string name="username_or_password_incorrect">Mot de passe ou nom de compte incorrect !</string>
+    <string name="user_created">Utilisateur crée avec succes</string>
     <string name="edit">Edit</string>
-    <string name="delete">Delete</string>
-    <string name="create_company">Create Company</string>
-    <string name="create_manager">CREATE MANAGER</string>
-    <string name="manager_last_name">Manager Last name</string>
-    <string name="manager_first_name">Manager First Name</string>
-    <string name="manager_creation_fail">Please fill atleast one field</string>
-    <string name="manager_creation_success">Manager created</string>
+    <string name="delete">Supprimer</string>
+    <string name="create_company">Creer societe</string>
+    <string name="create_manager">CREER MANAGER</string>
+    <string name="manager_last_name">Nom Manager</string>
+    <string name="manager_first_name">Prenom Manager</string>
+    <string name="manager_creation_fail">Veuillez remplir au moins un champs</string>
+    <string name="manager_creation_success">Manager creé avec succes</string>
     <string name="title_activity_side_menu">SideMenuActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Parametres</string>
     <string name="title_activity_depense_list2">DepenseList2Activity</string>
     <string name="title_activity_tache_list">TacheListActivity</string>
     <string name="title_activity_projet_list">ProjetListActivity</string>
     <string name="search_hint">hint</string>
-    <string name="error_depense">You should choose either a company or a project and not both of them !</string>
-    <string name="raison_sociale_required">The field \'Raison Sociele\' is required !</string>
-    <string name="nom_du_projet_required">The field \'Nom du projet\' is required !</string>
+    <string name="error_depense">Vous devez choisir soit une societe ou un projet et non les deux</string>
+    <string name="raison_sociale_required">Le champ \'Raison Sociele\' est requis !</string>
+    <string name="nom_du_projet_required">Le champ \'Nom du projet\' est requis !</string>
     <string name="ajout_societe">Ajout d\'une societé</string>
     <string name="raison_sociale">Raison sociale</string>
     <string name="date_fondation">Date de fondation</string>
     <string name="create">Créer</string>
     <string name="add">Ajouter</string>
     <string name="show_popup_window">Show Popup Window</string>
-    <string name="manage_the_companies">Manage the Companies</string>
+    <string name="manage_the_companies">Gérer les entreprises</string>
     <string name="projects">Projets</string>
-    <string name="manage_the_projects">Manage the Projects</string>
+    <string name="manage_the_projects">Gérer les projets</string>
     <string name="expenses">Dépenses</string>
-    <string name="manage_the_expenses">Manage the Expenses</string>
+    <string name="manage_the_expenses">Gérer les dépenses</string>
     <string name="tasks">Temps</string>
-    <string name="manage_the_tasks">Manage the Tasks</string>
+    <string name="manage_the_tasks">Gérer le Temps</string>
     <string name="statistics">Statistiques</string>
-    <string name="view_the_statistics">View the Statistics</string>
+    <string name="view_the_statistics">Voir les statistiques</string>
     <string name="nom_du_projet">Nom du projet</string>
     <string name="budget_estim_dh">Budget Estimé (DH)</string>
     <string name="date_de_d_but_du_projet">Date de début du projet</string>
@@ -93,7 +93,7 @@
         <item>Time</item>
     </string-array>
     <string name="title_activity_depense_list_dashboard">DepenseListDashboardActivity</string>
-    <string name="error_depense_criteria">You can\'t choose a company and a project at the same time !</string>
+    <string name="error_depense_criteria">Vous ne pouvez pas choisir une societe et un projet en meme temps!</string>
     <string name="title_activity_temps_list_dashboard">TempsListDashboardActivity</string>
     <string name="heure_debut">Heure Debut</string>
     <string name="heure_fin">Heure Fin</string>
