fixed misc stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="societe">Sociétés</string>
     <string name="sign_in">SIGN IN</string>
     <string name="password">Mot de passe</string>
-    <string name="username">Nom de comte</string>
+    <string name="username">Login</string>
     <string name="first_name">Prenom</string>
     <string name="last_name">Nom</string>
     <string name="sign_up">S\'inscrire</string>
